--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   },
   "homepage": "https://github.com/MondoGao/M-blog#readme",
   "dependencies": {
+    "ejs": "^2.5.3",
+    "express": "^4.14.0",
     "mongodb": "^2.2.12"
   },
   "devDependencies": {
-    "eslint": "^3.11.1"
+    "eslint": "^3.11.1",
+    "gulp": "^3.9.1",
+    "supervisor": "^0.12.0"
   }
 }
