--- a/package.json
+++ b/package.json
@@ -23,9 +23,21 @@
   },
   "homepage": "https://github.com/MondoGao/M-blog#readme",
   "dependencies": {
+    "config-lite": "^1.5.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "ejs": "^2.5.3",
     "express": "^4.14.0",
-    "mongodb": "^2.2.12"
+    "express-formidable": "^1.0.0",
+    "express-session": "^1.14.2",
+    "express-winston": "^2.1.0",
+    "marked": "^0.3.6",
+    "moment": "^2.17.1",
+    "mongodb": "^2.2.12",
+    "mongolass": "^2.3.2",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
